goform_mysql/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goform-sql
  labels:
    app: goform-sql
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
    protocol: TCP
  selector:
    app: goform-sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
    tier: backend
